--- a/Pickin/Pages/Pedidos/Orders.cshtml
+++ b/Pickin/Pages/Pedidos/Orders.cshtml
@@ -1014,7 +1014,7 @@
 
 </div>
 
-
+<script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="~/lib/plugins/footable/footable.all.min.js"></script>
 
 <link rel="stylesheet" href="~/css/plugins/footable/footable.core.css" type='text/css' />
