--- a/Pickin/wwwroot/css/plugins/steps/jquery.steps.css
+++ b/Pickin/wwwroot/css/plugins/steps/jquery.steps.css
@@ -148,7 +148,8 @@
 }
 
 .wizard-big.wizard > .content {
-    min-height: 320px;
+/*    min-height: 320px;*/
+    min-height:25vw;
 }
 .wizard.vertical > .content
 {
