--- a/Pickin/Pages/Pedidos/Create.cshtml
+++ b/Pickin/Pages/Pedidos/Create.cshtml
@@ -45,19 +45,19 @@
                                 }
                             </div>
                             <div class="form-group">
-                                <label asp-for="Pedido.Cantidad" class="control-label col-md-2"></label>
+                                <label asp-for="Pedido.CantidadTotal" class="control-label col-md-2"></label>
                                 <div class="input-group date col-md-8">
                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                    <input asp-for="Pedido.Cantidad" class="form-control" />
-                                    <span asp-validation-for="Pedido.Cantidad" class="text-danger"></span>
+                                    <input asp-for="Pedido.CantidadTotal" class="form-control" />
+                                    <span asp-validation-for="Pedido.CantidadTotal" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Pedido.Total" class="control-label col-md-2"></label>
+                                <label asp-for="Pedido.MontoTotal" class="control-label col-md-2"></label>
                                 <div class="input-group col-md-8">
                                     <span class="input-group-addon"><strong>U$S</strong></span>
-                                    <input asp-for="Pedido.Total" class="form-control" />
-                                    <span asp-validation-for="Pedido.Total" class="text-danger"></span>
+                                    <input asp-for="Pedido.MontoTotal" class="form-control" />
+                                    <span asp-validation-for="Pedido.MontoTotal" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="form-group">
