--- a/Pickin/Pages/Pedidos/Details.cshtml
+++ b/Pickin/Pages/Pedidos/Details.cshtml
@@ -30,16 +30,16 @@
             @Html.DisplayFor(model => model.Pedido.Fecha)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Pedido.Cantidad)
+            @Html.DisplayNameFor(model => model.Pedido.CantidadTotal)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Pedido.Cantidad)
+            @Html.DisplayFor(model => model.Pedido.CantidadTotal)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Pedido.Total)
+            @Html.DisplayNameFor(model => model.Pedido.MontoTotal)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Pedido.Total)
+            @Html.DisplayFor(model => model.Pedido.MontoTotal)
         </dd>
     </dl>
 </div>
