Refactor de estilos

--- a/Pickin/Pages/Empresas/Create.cshtml
+++ b/Pickin/Pages/Empresas/Create.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="Empresa.Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Empresa.Celular" class="control-label"></label>
+                <input asp-for="Empresa.Celular" class="form-control" />
+                <span asp-validation-for="Empresa.Celular" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Empresa.Image" class="control-label"></label>
                 <input asp-for="postedFile" type="file" class="form-control" />
                 <span asp-validation-for="Empresa.Image" class="text-danger"></span>
