--- a/Pickin/Pages/Shared/_Front_Layout.cshtml
+++ b/Pickin/Pages/Shared/_Front_Layout.cshtml
@@ -42,7 +42,7 @@
             @RenderBody()
 
             <!-- Footer -->
-            <partial name="~/Pages/Shared/_Footer.cshtml" />
+            @*<partial name="~/Pages/Shared/_Footer.cshtml" />*@
 
         </div>
         <!-- End page wrapper-->
