--- a/Pickin/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -22,21 +22,21 @@
                 }
                 else
                 {
-                    <h1 class="logo-name"><img src="~/images/logo color.png" /></h1>
+                    <h1 class="logo-name"><img src="~/images/logo.png" width="150px"/></h1>
                 }
             </div>
             <br />
             <br />
-            <h3 class="text-center">Ingrese su mail para blanquear su contraseña.</h3>
+            <h3 class="text-center">Ingrese su mail para blanquear la contraseña.</h3>
 
             <form method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    @*<span asp-validation-for="Input.Email" class="text-danger"></span>*@
                 </div>
                 <input type="hidden" asp-for="@Model.EmpresaId" />
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
             <div class="form-group" style="text-align: center">
