--- a/Pickin/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,21 +16,21 @@
     <div class="middle-box loginscreen  animated fadeInDown">
         <div style="padding-top:120px">
             <div class="text-center">
-                <h1 class="logo-name"><img src="~/images/logo color.png" /></h1>
+                <h1 class="logo-name"><img src="~/images/logo.png" width="150px" /></h1>
             </div>
             <br />
             <br />
-            <h3 class="text-center">Bienvenido a su plataforma de inversiones</h3>
+            <h3 class="text-center">Bienvenido!</h3>
 
             <form id="account" method="post">
 
                 <div class="form-group">
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    <input asp-for="Input.Email" class="form-control" placeholder="Email" />
+                  @*  <span asp-validation-for="Input.Email" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    <input asp-for="Input.Password" class="form-control" placeholder="Contraseña" />
+                @*    <span asp-validation-for="Input.Password" class="text-danger"></span>*@
                 </div>
 
                 <div style="color:red">
