--- a/Pickin/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -18,11 +18,11 @@
             <div class="text-center">
                 @if (Model.EmpresaImage != null)
                 {
-                    <h1 class="logo-name"><img src="data:image/jpg;base64,@Convert.ToBase64String(Model.EmpresaImage)" /></h1>
+                    <h1 class="logo-name"><img src="data:image/jpg;base64,@Convert.ToBase64String(Model.EmpresaImage)" style="object-fit: contain; height: 150px;" /></h1>
                 }
                 else
                 {
-                    <h1 class="logo-name"><img src="~/images/logo color.png" /></h1>
+                    <h1 class="logo-name"><img src="~/images/logo.png" width="150px" /></h1>
                 }
             </div>
             <br />
