--- a/Pickin/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -22,7 +22,7 @@
                 }
                 else
                 {
-                    <h1 class="logo-name"><img src="~/images/logo color.png" /></h1>
+                    <h1 class="logo-name"><img src="~/images/logo.png" width="150px" /></h1>
                 }
             </div>
             <br />
