--- a/Pickin/Pages/Company/Create2.cshtml
+++ b/Pickin/Pages/Company/Create2.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Pickin | Create";
-    //Layout = null;
+    Layout = "/Pages/Shared/_Front_Layout.cshtml";
 }
 
 <!-- Include SmartWizard CSS -->
@@ -176,10 +176,6 @@
                                                     @if (item.Image != null)
                                                     {
                                                         <img alt="@item.Id" class="img-circle" src="data:image/jpg;base64,@Convert.ToBase64String(item.Image)" />
-                                                    }
-                                                    else
-                                                    {
-                                                        <img alt="@item.Id" class="img-circle" src="~/images/Tipito.svg" />
                                                     }
                                                 </div>
                                             </td>
