--- a/Pickin/wwwroot/css/plugins/steps/jquery.steps.css
+++ b/Pickin/wwwroot/css/plugins/steps/jquery.steps.css
@@ -68,7 +68,7 @@
 
 .wizard > .steps > ul > li
 {
-    width: 25%;
+    width: 33%;
 }
 
 .wizard > .steps > ul > li,
@@ -107,20 +107,19 @@
     cursor: default;
 }
 
-.wizard > .steps .current a,
-.wizard > .steps .current a:hover,
-.wizard > .steps .current a:active
-{
-    background: #1AB394;
-    color: #fff;
-    cursor: default;
-}
+    .wizard > .steps .current a,
+    .wizard > .steps .current a:hover,
+    .wizard > .steps .current a:active {
+        background: #ee5730;
+        color: #fff;
+        cursor: default;
+    }
 
 .wizard > .steps .done a,
 .wizard > .steps .done a:hover,
 .wizard > .steps .done a:active
 {
-    background: #6fd1bd;
+    background: #f3d0d7;
     color: #fff;
 }
 
@@ -149,7 +148,7 @@
 
 .wizard-big.wizard > .content {
 /*    min-height: 320px;*/
-    min-height:25vw;
+    min-height:115vw;
 }
 .wizard.vertical > .content
 {
@@ -163,9 +162,9 @@
 {
     float: left;
     position: absolute;
-    width: 95%;
-    height: 95%;
-    padding: 2.5%;
+    width: 100%;
+    height: 100%;
+/*    padding: 2.5%;*/
 }
 
 .wizard > .content > .body ul
@@ -206,7 +205,7 @@
 .wizard > .content > .body label
 {
     display: inline-block;
-    margin-bottom: 0.5em;
+    margin-bottom: -1em;
 }
 
 .wizard > .content > .body label.error
@@ -252,7 +251,7 @@
 .wizard > .actions a:hover,
 .wizard > .actions a:active
 {
-    background: #1AB394;
+    background: #ee5730;
     color: #fff;
     display: block;
     padding: 0.5em 1em;
