--- a/Pickin/Pages/Pedidos/Create.cshtml
+++ b/Pickin/Pages/Pedidos/Create.cshtml
@@ -51,7 +51,7 @@
                             <div class="form-group">
                                 <label asp-for="Pedido.MontoTotal" class="control-label col-md-2"></label>
                                 <div class="input-group col-md-8">
-                                    <span class="input-group-addon"><strong>U$S</strong></span>
+                                    <span class="input-group-addon"><strong>$</strong></span>
                                     <input asp-for="Pedido.MontoTotal" class="form-control" />
                                     <span asp-validation-for="Pedido.MontoTotal" class="text-danger"></span>
                                 </div>
