--- a/Pickin/Pages/Shared/_LoginPartial.cshtml
+++ b/Pickin/Pages/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li>
+        <li style="margin-top: 4px;">
             @*<cache vary-by-user="true">*@
                 <div class="dropdown profile-element">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
