--- a/Pickin/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -32,7 +32,7 @@
                 <input asp-for="Input.LastName" class="form-control" />
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Input.Image" class="control-label"></label>
                 @if (Model.Input.Image != null)
                 {
@@ -40,7 +40,7 @@
                 }
                 <input asp-for="postedFile" type="file" class="form-control" />
                 <span asp-validation-for="Input.Image" class="text-danger"></span>
-            </div>
+            </div>*@
             <button id="update-profile-button" type="submit" class="btn btn-primary">Actualizar</button>
         </form>
     </div>
