--- a/Pickin/Pages/Empresas/Edit.cshtml
+++ b/Pickin/Pages/Empresas/Edit.cshtml
@@ -15,13 +15,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Empresa.Codigo" class="control-label"></label>
-                <input asp-for="Empresa.Codigo" class="form-control" />
+                <input asp-for="Empresa.Codigo" class="form-control" readonly="readonly"/>
                 <span asp-validation-for="Empresa.Codigo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empresa.Descripcion" class="control-label"></label>
                 <input asp-for="Empresa.Descripcion" class="form-control" />
                 <span asp-validation-for="Empresa.Descripcion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Empresa.Celular" class="control-label"></label>
+                <input asp-for="Empresa.Celular" class="form-control" />
+                <span asp-validation-for="Empresa.Celular" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Empresa.Image" class="control-label"></label>
