--- a/Pickin/Pages/Productos/Create.cshtml
+++ b/Pickin/Pages/Productos/Create.cshtml
@@ -32,7 +32,8 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="Producto.Precio" class="control-label col-md-2"></label>
-                                <div class="col-md-8">
+                                <div class="input-group col-md-8">
+                                    <span class="input-group-addon"><strong>$</strong></span>
                                     <input asp-for="Producto.Precio" class="form-control" />
                                     <span asp-validation-for="Producto.Precio" class="text-danger"></span>
                                 </div>
@@ -69,4 +70,23 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script type="text/javascript" src="~/lib/plugins/metisMenu/metisMenu.min.js"></script>
+    <script type="text/javascript" src="~/lib/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $.validator.methods.range = function (value, element, param) {
+                var globalizedValue = value.replace(",", ".");
+                return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+            }
+
+            $.validator.methods.number = function (value, element) {
+                return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+            }
+
+        });
+    </script>
+
 }
