--- a/Pickin/Pages/Productos/Delete.cshtml
+++ b/Pickin/Pages/Productos/Delete.cshtml
@@ -5,54 +5,70 @@
     ViewData["Title"] = "Pickin | Delete";
 }
 
-<h1>Delete</h1>
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h1>Eliminar Producto</h1>
+                </div>
+                <div class="ibox-content">
+                    <form method="post" enctype="multipart/form-data">
+                        <div class="form-horizontal">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Producto.Nombre" class="control-label col-md-2"></label>
+                                <div class="col-md-8">
+                                    <input asp-for="Producto.Nombre" class="form-control" readonly="readonly" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Producto.Descripcion" class="control-label col-md-2"></label>
+                                <div class="col-md-8">
+                                    <input asp-for="Producto.Descripcion" class="form-control" readonly="readonly" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Producto.Precio" class="control-label col-md-2"></label>
+                                <div class="input-group col-md-8">
+                                    <span class="input-group-addon"><strong>$</strong></span>
+                                    <input asp-for="Producto.Precio" class="form-control" readonly="readonly" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Producto.Stock" class="control-label col-md-2"></label>
+                                <div class="col-md-8">
+                                    <input asp-for="Producto.Stock" class="form-control" readonly="readonly" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Producto.Image" class="control-label col-md-2"></label>
+                                <div class="col-md-8">
+                                    @if (Model.Producto.Image != null)
+                                    {
+                                        <img alt="@Model.Producto.Id" src="data:image/jpg;base64,@Convert.ToBase64String(Model.Producto.Image)" width="150px" />
+                                    }
+                                </div>
+                            </div>
+                            <input type="hidden" asp-for="Producto.Id" />
+                            <input type="hidden" asp-for="Producto.Image" />
+                            <input type="hidden" asp-for="Producto.EmpresaId" />
+                            <hr />
+                            <div class="form-group">
+                                <div class="col-md-offset-1">
+                                    <input type="submit" value="Aceptar" class="btn btn-primary" />
+                                    <a asp-page="Index" class="btn btn-white">Cancelar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Producto</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producto.Nombre)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producto.Descripcion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Descripcion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producto.Precio)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Precio)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producto.Stock)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Stock)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producto.Image)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Image)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producto.Empresa)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Empresa.Id)
-        </dd>
-    </dl>
-
-    <form method="post">
-        <input type="hidden" asp-for="Producto.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
